--- a/docs/ios/tracker/am6.mdx
+++ b/docs/ios/tracker/am6.mdx
@@ -172,7 +172,7 @@ Am6 enters the binding state.
  *
  *The device must call this API every time it is connected, so that the latest time can be synchronized to AM6.
  *
- *@param success  You can get data by reading:  battery, isCharging,firmwareVersion,hardwareVersion,bindStatus
+ *@param success  You can get data by reading:  battery, isCharging,firmwareVersion,sdkFirmwareVersion,hardwareVersion,bindStatus
  *{
  * battery = 100;   Power 0-100
  * isCharging = 0;  0:NO Charging  1:Charging
