--- a/docs/android/tracker/am6.mdx
+++ b/docs/android/tracker/am6.mdx
@@ -37,13 +37,16 @@ int callbackId = iHealthDevicesManager.getInstance().registerClientCallback(new 
     @Override
     public void onSDKStatus(int statusId, String statusMessage) { 
         if (iHealthDevicesManager.SDK_STATUS_BLUETOOTH_DISABLE == statusId) {
-            Log.i("", "Bluetooth is disable!");
+            Log.i("", "Bluetooth service is disable!");
+
+        } else if (iHealthDevicesManager.SDK_STATUS_LOCATION_DISABLE == statusId) {
+            Log.i("", "Location service is disable!");
 
         } else if (iHealthDevicesManager.SDK_STATUS_BLUETOOTH_PERMISSION == statusId) {
             Log.i("", "Miss android permission: " + statusMessage);
 
         } else if (iHealthDevicesManager.SDK_STATUS_LICENSE_EXPIRED == statusId) {
-            Log.i("", "License is not match with applicaiton id or is expired!");
+            Log.i("", "License is not match with application id or is expired!");
 
         } else if (iHealthDevicesManager.SDK_STATUS_LICENSE_DEVICE_PERMISSION == statusId) {
             Log.i("", "Need this device permission!");
