--- a/docs/android/blood_glucose/bg1a.mdx
+++ b/docs/android/blood_glucose/bg1a.mdx
@@ -6,7 +6,7 @@ sidebar_position: 5
 :::info
 1. BG1A is a low-power Bluetooth glucose meter with indicator lights, but without a screen or buttons.
 2. The BG1A is only turned on by inserting test strip.
-3. BG1A only support online measurement.
+3. Although BG1A can store 2 pieces of data, we do not recommend it for offline measurement.
 4. Once the device is turned on, it begins Bluetooth broadcasting and can be scanned and connected to by the app.
 5. After blood glucose measurement is completed, or the test strip is removed, the device will shut down and bluetooth connection will disconnect.
 :::
