--- a/docs/android/tracker/am6.mdx
+++ b/docs/android/tracker/am6.mdx
@@ -67,6 +67,10 @@ iHealthDevicesManager.getInstance().startDiscovery(DiscoveryTypeEnum.AM6);
 
 ### 3.Connect to AM6 devices
 
+:::info
+AM6 supports direct connection to the device without scanning, but after disconnection, the device cannot be connected immediately, because the phone needs time to release the GATT service, we recommend waiting for 2 seconds and trying to connect again. Connecting after scanning does not have this problem.
+:::
+
 ```java
 iHealthDevicesManager.getInstance().connectDevice(mac, iHealthDevicesManager.TYPE_AM6)
 
@@ -377,6 +381,11 @@ private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallb
 ## Device settings
 
 ### Find device
+
+:::info
+Call the API once, the watch only vibrates 6 times for about 5 seconds.
+So if you want to achieve continuous vibration, please continue to call the API after 5 seconds.
+:::
 
 ```java
 Am6Control control = iHealthDevicesManager.getInstance().getAm6Control(mDeviceMac);
