--- a/docs/android/blood_oxygen/po3.mdx
+++ b/docs/android/blood_oxygen/po3.mdx
@@ -90,9 +90,8 @@ private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallb
 ### Get the PO3 device infomation
 
 :::info
-The KN-550BT support this feature on firmware 3.1.1 or above.
+The PO3 support this feature on firmware 3.1.1 or above.
 :::
-
 
 ```java
 Po3Control control = iHealthDevicesManager.getInstance().getPo3Control(mDeviceMac);
@@ -126,6 +125,10 @@ private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallb
 ```
 
 ### Notify the PO3 device infomation
+
+:::info
+The PO3 support this feature on firmware 3.1.1 or above.
+:::
 
 ```java
 // Return value
