更新文档配置

--- a/docs/home/intro.mdx
+++ b/docs/home/intro.mdx
@@ -79,7 +79,7 @@ To get started, check out the following resources:
 <div className="grid xl:grid-cols-6 gap-4">
 
 <GridLink
-  to="../docs/android/quickstart"
+  to="/ihealthlabs-sdk-docs/android/quickstart"
   title="Android"
   subtitle="Java"
   className="xl:col-span-3"
@@ -87,7 +87,7 @@ To get started, check out the following resources:
 />
 
 <GridLink
-  to="../docs/ios/quickstart"
+  to="/ihealthlabs-sdk-docs/ios/quickstart"
   title="iOS"
   subtitle="Objective C"
   className="xl:col-span-3"
@@ -95,7 +95,7 @@ To get started, check out the following resources:
 />
 
 <GridLink
-  to="../docs/react-native/quickstart"
+  to="/ihealthlabs-sdk-docs/react-native/quickstart"
   title="React Native"
   subtitle="Android + iOS"
   className="xl:col-span-3"
