--- a/docs/android/blood_oxygen/po3.mdx
+++ b/docs/android/blood_oxygen/po3.mdx
@@ -82,9 +82,44 @@ private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallb
     public void onDeviceNotify(String mac, String deviceType, String action, String message) {
         if (PoProfile.ACTION_SET_TIME.equals(action)) {
             Log.i("", "set time success")
+        } 
+    } 
+}
+```
+
+### Get the PO3 time
+
+:::info
+The PO3 support this feature on firmware 3.2.0 or above.
+:::
+
+```java
+Po3Control control = iHealthDevicesManager.getInstance().getPo3Control(mDeviceMac);
+control.getTime();
+```
+
+```java
+// Return value
+private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
+    @Override
+    public void onDeviceNotify(String mac, String deviceType, String action, String message) {
+        if (PoProfile.ACTION_GET_TIME.equals(action)) {
+            try {
+                JSONObject obj = new JSONObject(message);
+                String time = obj.getString(PoProfile.GET_TIME);
+            } catch (JSONException e) {
+                e.printStackTrace();
+            }
+        } else if (PoProfile.ACTION_ERROR_PO.equals(action)) {
+            JSONObject obj = new JSONObject(message);
+            int errorId = obj.getInt(PoProfile.ERROR_NUM_PO);
+            if (errorId == 403) {
+                Log.i("", "This firmware don't support this API");
+            }
         }
     } 
 }
+```
 
 ### Get the PO3 battery status
 
